--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/app.ts",
-		"build": "tsc",
-		"start": "node build/src/app.js",
+		"build": "rimraf ./build && tsc",
+		"start": "node --require tsconfig-paths/register build/src/app.js",
 		"lint": "eslint .",
 		"test": "jest --runInBand"
 	},
@@ -50,6 +50,7 @@
 		"eslint": "^8.22.0",
 		"jest": "^28.1.3",
 		"pino-pretty": "^9.1.0",
+		"rimraf": "^3.0.2",
 		"ts-jest": "^28.0.8",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
