--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "rest-api-tutorial-updated",
+	"name": "typescript-express-boilerplate",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "build/src/app.js",
 	"author": "Saad Khan",
 	"license": "MIT",
 	"scripts": {
@@ -12,39 +12,23 @@
 		"test": "jest --runInBand"
 	},
 	"dependencies": {
-		"bcrypt": "^5.0.1",
 		"config": "^3.3.7",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.5",
-		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"express-pino-logger": "^7.0.0",
 		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.21",
 		"mongoose": "^6.5.3",
 		"pino": "^8.4.2",
-		"prom-client": "^14.0.0",
-		"response-time": "^2.3.2",
-		"swagger-jsdoc": "^6.1.0",
-		"swagger-ui-express": "^4.1.6",
 		"zod": "^3.18.0"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^5.0.0",
-		"@types/body-parser": "^1.19.2",
 		"@types/config": "^3.3.0",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
-		"@types/express-pino-logger": "^4.0.3",
 		"@types/jest": "^28.1.8",
 		"@types/jsonwebtoken": "^8.5.9",
-		"@types/lodash": "^4.14.184",
-		"@types/nanoid": "^3.0.0",
 		"@types/node": "^18.7.11",
 		"@types/pino": "^7.0.5",
-		"@types/response-time": "^2.3.5",
-		"@types/swagger-jsdoc": "^6.0.1",
-		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.35.1",
 		"@typescript-eslint/parser": "^5.35.1",
 		"eslint": "^8.22.0",
