Setup dotenv and dotenv-vault

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
 		"baseUrl": "./src",
 		"paths": {
 			"~/*": [ "./*" ]
-		}
+		},
+		"typeRoots": [ "./env.d.ts" ]
 	},
 	"exclude": [
 		"node_modules/**/*",
