--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
 	"author": "Saad Khan",
 	"license": "MIT",
 	"scripts": {
-		"dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/app.ts",
+		"dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register --require dotenv/config src/app.ts",
 		"build": "rimraf ./build && tsc",
 		"start": "node --require tsconfig-paths/register build/src/app.js",
 		"lint": "eslint .",
-		"test": "jest --runInBand"
+		"test": "jest --runInBand",
+		"env:push": "dotenv-vault push",
+		"env:pull": "dotenv-vault pull",
+		"env:open": "dotenv-vault open"
 	},
 	"dependencies": {
-		"config": "^3.3.7",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.5",
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
@@ -22,7 +25,6 @@
 		"zod": "^3.18.0"
 	},
 	"devDependencies": {
-		"@types/config": "^3.3.0",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^28.1.8",
