--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dayjs": "^1.11.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-pino-logger": "^7.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
 		"pino": "^8.4.2",
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/express-pino-logger": "^4.0.3",
 		"@types/jest": "^28.1.8",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/node": "^18.7.11",
