--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-pino-logger": "^7.0.0",
+		"helmet": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
 		"pino": "^8.4.2",
