--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
+		"@types/eslint": "^8.4.6",
 		"@types/express": "^4.17.13",
 		"@types/express-pino-logger": "^4.0.3",
 		"@types/jest": "^28.1.8",
