--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.5",
 		"dotenv": "^16.0.1",
+		"eslint-plugin-jest": "^27.0.4",
 		"express": "^4.18.1",
 		"express-pino-logger": "^7.0.0",
 		"helmet": "^6.0.0",
