--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"eslint": "^8.29.0",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"jest": "^28.1.3",
 		"pino-pretty": "^9.1.1",
 		"rimraf": "^3.0.2",
