:loud_sound: Update depracated pinoMiddleware

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ ACCESS_TOKEN_AGE='__number__'
 DB_URI='mongodb://__host__:__port__/__collection__'
 HASHING_ITERATIONS='__number_at_least_10000__'
 HASHING_PEPPER='__string__'
-NODE_ENV="__development|production|test__"
+NODE_ENV='__development|production|test__'
 PORT='__number__'
 PRIVATE_KEY='__string__'
 PUBLIC_KEY='__string__'
