--- a/package.json
+++ b/package.json
@@ -21,22 +21,20 @@
 		"dotenv": "^16.0.3",
 		"eslint-plugin-jest": "^27.2.1",
 		"express": "^4.18.2",
-		"express-pino-logger": "^7.0.0",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.8.4",
 		"pino": "^8.8.0",
+		"pino-http": "^8.3.1",
 		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
 		"@types/eslint": "^8.4.10",
 		"@types/express": "^4.17.15",
-		"@types/express-pino-logger": "^4.0.3",
 		"@types/jest": "^28.1.8",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/node": "^18.11.18",
-		"@types/pino": "^7.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
 		"eslint": "^8.32.0",
