--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.7",
 		"dotenv": "^16.0.3",
-		"eslint-plugin-jest": "^27.2.1",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
@@ -38,9 +37,14 @@
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
 		"eslint": "^8.35.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-import-resolver-typescript": "^3.5.3",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jest": "^27.2.1",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"jest": "^29.4.3",
 		"pino-pretty": "^9.4.0",
+		"prettier": "^2.8.4",
 		"rimraf": "^4.1.2",
 		"ts-jest": "^29.0.5",
 		"ts-node-dev": "^2.0.0",
