--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"env:login": "dotenv-vault login -y",
 		"env:push": "dotenv-vault push",
 		"env:pull": "dotenv-vault pull && dotenv-vault pull example .env.example",
-		"env:open": "dotenv-vault open -y"
+		"env:open": "dotenv-vault open -y",
+		"prisma": "prisma"
 	},
 	"dependencies": {
+		"@prisma/client": "^4.11.0",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.7",
 		"dotenv": "^16.0.3",
@@ -46,6 +48,7 @@
 		"jest": "^29.4.3",
 		"pino-pretty": "^9.4.0",
 		"prettier": "^2.8.4",
+		"prisma": "^4.11.0",
 		"rimraf": "^4.1.2",
 		"ts-jest": "^29.0.5",
 		"ts-node-dev": "^2.0.0",
