--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # example
+DATABASE_URL='__db_uri__'
 ACCESS_TOKEN_AGE='__number__'
-DB_URI='mongodb://__host__:__port__/__collection__'
 HASHING_ITERATIONS='__number_at_least_10000__'
 HASHING_PEPPER='__string__'
 NODE_ENV='__development|production|test__'
