Add dot-env vault dep

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,1 @@
-# example
-DATABASE_URL='__db_uri__'
-ACCESS_TOKEN_AGE='__number__'
-HASHING_ITERATIONS='__number_at_least_10000__'
-HASHING_PEPPER='__string__'
-NODE_ENV='__development|production|test__'
-PORT='__number__'
-PRIVATE_KEY='__string__'
-PUBLIC_KEY='__string__'
-REFRESH_TOKEN_AGE='__string__'
+# example@v0
