--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/node": "^18.14.2",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
+		"dotenv-vault": "^1.18.0",
 		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-import-resolver-typescript": "^3.5.3",
