--- a/package.json
+++ b/package.json
@@ -25,32 +25,35 @@
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
-		"mongoose": "^7.0.0",
+		"mongoose": "^7.0.1",
 		"pino": "^8.11.0",
 		"pino-http": "^8.3.3",
-		"zod": "^3.20.6"
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
+		"@total-typescript/ts-reset": "^0.3.7",
 		"@types/cors": "^2.8.13",
 		"@types/eslint": "^8.21.1",
 		"@types/express": "^4.17.17",
 		"@types/jest": "^29.4.0",
 		"@types/jsonwebtoken": "^9.0.1",
-		"@types/node": "^18.14.2",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0",
+		"@types/node": "^18.14.6",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
 		"dotenv-vault": "^1.18.0",
 		"eslint": "^8.35.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-import-resolver-typescript": "^3.5.3",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jest": "^27.2.1",
+		"eslint-plugin-prefer-arrow-functions": "^3.1.4",
+		"eslint-plugin-sort-keys-plus": "^1.3.1",
 		"eslint-plugin-unused-imports": "^2.0.0",
-		"jest": "^29.4.3",
+		"jest": "^29.5.0",
 		"pino-pretty": "^9.4.0",
 		"prettier": "^2.8.4",
 		"prisma": "^4.11.0",
-		"rimraf": "^4.1.2",
+		"rimraf": "^4.3.1",
 		"ts-jest": "^29.0.5",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.2",
