--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,51 @@
 {
 	"compilerOptions": {
-		"target": "es5",
-		"lib": [ "esnext" ],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
 		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"useUnknownInCatchVariables": true,
+
+		"baseUrl": "./src",
 		"module": "CommonJS",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
+		"paths": {
+			"~/*": ["./*"]
+		},
+
+		"downlevelIteration": true,
+		"noEmit": true,
+		"importsNotUsedAsValues": "error",
+
+		"allowJs": true,
+		"checkJs": true,
+
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
 		"jsx": "react-jsx",
-		"checkJs": true,
-		"downlevelIteration": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"noImplicitReturns": true,
-		"noImplicitOverride": true,
-		"noUncheckedIndexedAccess": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"strictPropertyInitialization": true,
-		"outDir": "build",
-		"baseUrl": "./src",
-		"paths": {
-			"~/*": [ "./*" ]
-		},
-		"typeRoots": [ "./env.d.ts" ]
+		"lib": ["esnext"],
+		"target": "esnext",
+
+		"skipLibCheck": true
 	},
 	"exclude": [
 		"node_modules/**/*",
 		"build/**/*",
-		"dist/**/*"
+		"dist/**/*",
+		"coverage/*",
+		"public"
 	]
 }
