--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
 		"start:production": "node --require tsconfig-paths/register build/src/app.js",
 		"format": "prettier --write .",
 		"lint": "eslint . --fix",
-		"test": "jest --runInBand",
+		"test": "vitest watch",
+		"test-ui": "vitest --ui",
+		"typecheck": "vitest typecheck",
 		"env:login": "dotenv-vault login -y",
 		"env:push": "dotenv-vault push",
 		"env:pull": "dotenv-vault pull",
-		"env:open": "dotenv-vault open -y",
-		"prisma": "prisma",
-		"dotenv-vault": "dotenv-vault"
+		"env:open": "dotenv-vault open -y"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.0.0",
@@ -36,28 +36,29 @@
 		"@types/cors": "^2.8.13",
 		"@types/eslint": "^8.44.0",
 		"@types/express": "^4.17.17",
-		"@types/jest": "^29.5.3",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.4.2",
 		"@typescript-eslint/eslint-plugin": "^6.1.0",
 		"@typescript-eslint/parser": "^6.1.0",
+		"@vitest/coverage-v8": "^0.33.0",
+		"@vitest/ui": "^0.33.0",
 		"dotenv-vault": "^1.25.0",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jest": "^27.2.3",
 		"eslint-plugin-prefer-arrow-functions": "^3.1.4",
 		"eslint-plugin-sort-keys-plus": "^1.3.1",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"jest": "^29.6.1",
+		"eslint-plugin-vitest": "^0.2.6",
 		"pino-pretty": "^10.0.1",
 		"prettier": "^3.0.0",
 		"prisma": "^5.0.0",
 		"rimraf": "^5.0.1",
-		"ts-jest": "^29.1.1",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vite-tsconfig-paths": "^4.2.0",
+		"vitest": "^0.33.0"
 	}
 }
