Fix formatting and linting errors

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register --require dotenv/config src/app.ts",
 		"build": "rimraf ./build && tsc",
 		"start:production": "node --require tsconfig-paths/register build/src/app.js",
+		"lint": "eslint . --fix && pnpm format",
 		"format": "prettier --write .",
-		"lint": "eslint . --fix",
 		"test": "vitest watch",
 		"test-ui": "vitest --ui",
 		"typecheck": "vitest typecheck",
