--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 		"express": "^4.18.2",
 		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.1",
-		"mongoose": "^7.4.0",
 		"pino": "^8.14.1",
 		"pino-http": "^8.3.3",
 		"zod": "^3.21.4"
@@ -47,16 +46,13 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-prefer-arrow-functions": "^3.1.4",
-		"eslint-plugin-sort-keys-plus": "^1.3.1",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.2.6",
 		"pino-pretty": "^10.0.1",
 		"prettier": "^3.0.0",
 		"prisma": "^5.0.0",
 		"rimraf": "^5.0.1",
-		"ts-node-dev": "^2.0.0",
-		"tsconfig-paths": "^4.2.0",
+		"tscpaths": "^0.0.9",
 		"tsx": "^3.12.7",
 		"typescript": "^5.1.6",
 		"vite-tsconfig-paths": "^4.2.0",
