--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.0.0",
+		"@ts-rest/core": "^3.26.4",
+		"@ts-rest/express": "^3.26.4",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.9",
-		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.1",
