--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "tsx --watch --require dotenv/config src/app.ts",
 		"build": "rimraf ./build && tsc -p tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src",
-		"start:production": "node --experimental-specifier-resolution=node --require dotenv/config build/app.js",
+		"start:production": "node --experimental-specifier-resolution=node build/app.js",
 		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format",
 		"format": "prettier --write .",
 		"test": "vitest watch",
@@ -42,6 +42,7 @@
 		"@typescript-eslint/parser": "^6.1.0",
 		"@vitest/coverage-v8": "^0.33.0",
 		"@vitest/ui": "^0.33.0",
+		"dotenv": "^16.3.1",
 		"dotenv-vault": "^1.25.0",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
