Add `keygen` script to `package.json`

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"env:login": "dotenv-vault login -y",
 		"env:push": "dotenv-vault push",
 		"env:pull": "dotenv-vault pull",
-		"env:open": "dotenv-vault open -y"
+		"env:open": "dotenv-vault open -y",
+		"key:generate": "ssh-keygen -t rsa -b 4096 -m PEM -f .rsa.key && openssl rsa -in .rsa.key -pubout -outform PEM -out .rsa.key.pub"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.0.0",
