--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"start": "tsx --watch --require dotenv/config src/app.ts",
-		"build": "rimraf ./build && tsc -p tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src",
+		"build": "rimraf ./build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
 		"start:production": "node --experimental-specifier-resolution=node build/app.js",
 		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format",
 		"format": "prettier --write .",
@@ -55,7 +55,7 @@
 		"prettier": "^3.0.3",
 		"prisma": "^5.3.1",
 		"rimraf": "^5.0.1",
-		"tscpaths": "^0.0.9",
+		"tsc-alias": "^1.8.7",
 		"tsx": "^3.12.10",
 		"typescript": "^5.2.2",
 		"vite-tsconfig-paths": "^4.2.1",
