--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
 	"name": "typescript-express-boilerplate",
 	"version": "1.0.0",
-	"author": "Saad Khan",
+	"author": "author-name",
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"start": "tsx --watch --require dotenv/config src/app.ts",
 		"build": "rimraf ./build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
 		"start:production": "node --experimental-specifier-resolution=node build/app.js",
-		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format",
-		"format": "prettier --write .",
+		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
+		"format": "prettier --write --log-level silent .",
+		"spellcheck": "cspell . --quiet",
 		"test": "vitest watch",
 		"test-ui": "vitest --ui",
 		"typecheck": "vitest typecheck",
@@ -43,6 +44,7 @@
 		"@typescript-eslint/parser": "^6.7.0",
 		"@vitest/coverage-v8": "^0.34.4",
 		"@vitest/ui": "^0.34.4",
+		"cspell": "^7.3.6",
 		"dotenv": "^16.3.1",
 		"dotenv-vault": "^1.25.0",
 		"eslint": "^8.49.0",
