--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"env:push": "dotenv-vault push",
 		"env:pull": "dotenv-vault pull",
 		"env:open": "dotenv-vault open -y",
-		"keygen": "ssh-keygen -t rsa -b 4096 -m PEM -f .rsa.key && openssl rsa -in .rsa.key -pubout -outform PEM -out .rsa.key.pub"
+		"keygen": "ssh-keygen -t rsa -b 4096 -m PEM -f .rsa.key && openssl rsa -in .rsa.key -pubout -outform PEM -out .rsa.key.pub",
+		"trace": "tsc --generateTrace ./trace && npx @typescript/analyze-trace trace"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.3.1",
@@ -42,6 +43,7 @@
 		"@types/node": "^20.6.4",
 		"@typescript-eslint/eslint-plugin": "^6.7.2",
 		"@typescript-eslint/parser": "^6.7.2",
+		"@typescript/analyze-trace": "^0.10.1",
 		"@vitest/coverage-v8": "^0.34.5",
 		"@vitest/ui": "^0.34.5",
 		"cspell": "^7.3.6",
