--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "typescript-express-boilerplate",
+	"name": "rest-starter",
 	"version": "1.0.0",
 	"author": "author-name",
 	"license": "MIT",
