--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-n": "^16.2.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.3.1",
 		"pino-pretty": "^10.2.0",
